Fixed width being too big

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -53,12 +53,11 @@ img {
 }
 
 .candidate-pic {
-/*  padding: 100px;*/
 }
 
 .data {
-  padding-left: 46px;
-  padding-right: 46px;
+  padding-left: 44px;
+  padding-right: 44px;
 }
 
 .left {
